--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Hey there!</title>
+    <title>Karen Calundre</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
